samples/_failures_safe/1761166531_277ca1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e39d9b76.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_e39d9b76.c:161:69: error: expected ‘)’ at end of input
  161 |         printf("Found string: \"%s\"\n", parser->current_token.value
      |               ~                                                     ^
      |                                                                     )
./samples/SAFE/__tmp_e39d9b76.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("Found string: \"%s\"\n", parser->current_token.value
      |         ^~~~~~
./samples/SAFE/__tmp_e39d9b76.c:161:9: error: expected declaration or statement at end of input
